--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "awh-dashboard",
+  "name": "water-app",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.0",
-    "@tanstack/react-query": "^4.35.5",
-    "@vitejs/plugin-react": "^4.2.1",
-    "lucide-react": "^0.312.0",
+    "@remix-run/dev": "^1.0.0",
+    "@shadcn/ui": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "recharts": "^2.10.0",
-    "tailwind-merge": "^2.2.1",
-    "vite": "^4.5.1"
+    "react-icons": "^4.10.1",
+    "recharts": "^2.5.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "vite preview"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "vite": "^4.4.9"
   }
 }
