--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "recharts": "^2.7.2",
+    "recharts": "^2.5.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.1",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
     "vite": "^5.0.0"
   }
 }
