--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@remix-run/dev": "^2.0.0",
+    "@remix-run/react": "^2.0.0"
   }
 }
