--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "water-app",
   "version": "1.0.0",
-  "private": true,
+  "description": "AWH Smart Dashboard for water monitoring",
+  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "vite"
+    "start": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.5.0",
-    "react-icons": "^4.10.1"
+    "recharts": "^2.8.0",
+    "react-icons": "^4.10.1",
+    "@shadcn/ui": "latest"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.1",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
     "vite": "^5.0.0",
-    "@remix-run/dev": "^2.0.0",
-    "@remix-run/react": "^2.0.0"
+    "@vitejs/plugin-react": "^4.0.0"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">=16"
   }
 }
